Closes #2521 - Fix code smells Stream.collect(Collectors.toList()) to Stream.toList()